@@ -1,3 +1,8 @@
+2001-03-07  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>
+
+	* guile-config.in (build-link): Really reverted the change of
+	2001-03-05.
+
 2001-03-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* guile-config.in (build-link): Reverted the previous patch.
